// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden: Render v1 conformance cases → Responses API request render-user-image-input 1`] = `
{
  "body": {
    "include": [
      "reasoning.encrypted_content",
    ],
    "input": [
      {
        "content": [
          {
            "text": "What does this page show?",
            "type": "input_text",
          },
          {
            "detail": "auto",
            "image_url": "data:image/png;base64,iVBORw0KGgpmaXh0dXJlOiBsb2dpbiBwYWdlIHNjcmVlbnNob3Q=",
            "type": "input_image",
          },
        ],
        "role": "user",
      },
    ],
    "instructions": "You are a helpful agent.",
    "max_output_tokens": 1024,
    "model": "gpt-5.5",
    "reasoning": {
      "effort": "low",
    },
    "store": false,
    "stream": true,
    "tools": [
      {
        "description": "Read a file from the sandbox workspace.",
        "name": "read_file",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "path": {
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
    ],
  },
  "ok": true,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-screenshot-tool-result 1`] = `
{
  "body": {
    "include": [
      "reasoning.encrypted_content",
    ],
    "input": [
      {
        "content": [
          {
            "text": "Take a screenshot of the login page.",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
      {
        "arguments": "{}",
        "call_id": "call_1",
        "name": "screenshot",
        "type": "function_call",
      },
      {
        "call_id": "call_1",
        "output": [
          {
            "text": "Login page loaded.",
            "type": "input_text",
          },
          {
            "detail": "auto",
            "image_url": "data:image/png;base64,iVBORw0KGgpmaXh0dXJlOiBsb2dpbiBwYWdlIHNjcmVlbnNob3Q=",
            "type": "input_image",
          },
          {
            "text": "Cursor at (640, 400).",
            "type": "input_text",
          },
        ],
        "type": "function_call_output",
      },
    ],
    "instructions": "You are a helpful agent.",
    "max_output_tokens": 1024,
    "model": "gpt-5.5",
    "reasoning": {
      "effort": "low",
    },
    "store": false,
    "stream": true,
    "tools": [
      {
        "description": "Capture the sandbox desktop.",
        "name": "screenshot",
        "parameters": {
          "additionalProperties": false,
          "properties": {},
          "required": [],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
    ],
  },
  "ok": true,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-deferred-tool-loaded 1`] = `
{
  "body": {
    "include": [
      "reasoning.encrypted_content",
    ],
    "input": [
      {
        "content": [
          {
            "text": "Deploy to staging.",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
      {
        "arguments": "{"query":"deploy"}",
        "call_id": "call_1",
        "name": "tool_search",
        "type": "function_call",
      },
      {
        "call_id": "call_1",
        "output": [
          {
            "text": "mcp__ops__deploy: Deploy the app.",
            "type": "input_text",
          },
        ],
        "type": "function_call_output",
      },
    ],
    "instructions": "You are a helpful agent.",
    "max_output_tokens": 1024,
    "model": "gpt-5.5",
    "reasoning": {
      "effort": "low",
    },
    "store": false,
    "stream": true,
    "tools": [
      {
        "description": "Read a file from the sandbox workspace.",
        "name": "read_file",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "path": {
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
      {
        "description": "Find deferred tools by keyword.",
        "name": "tool_search",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "query": {
              "type": "string",
            },
          },
          "required": [
            "query",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
      {
        "description": "Deploy the app.",
        "name": "mcp__ops__deploy",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "env": {
              "type": "string",
            },
          },
          "required": [
            "env",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
    ],
  },
  "ok": true,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-tool-results-cleared 1`] = `
{
  "body": {
    "include": [
      "reasoning.encrypted_content",
    ],
    "input": [
      {
        "content": [
          {
            "text": "What is in README.md?",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
      {
        "arguments": "{"path":"README.md"}",
        "call_id": "call_1",
        "name": "read_file",
        "type": "function_call",
      },
      {
        "call_id": "call_1",
        "output": [
          {
            "text": "[tool result cleared: call_id=call_1; read it with read_tool_result]",
            "type": "input_text",
          },
        ],
        "type": "function_call_output",
      },
      {
        "content": "README.md contains one heading: demo.",
        "role": "assistant",
      },
      {
        "content": [
          {
            "text": "And .env?",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
      {
        "arguments": "{"path":".env"}",
        "call_id": "call_2",
        "name": "read_file",
        "type": "function_call",
      },
      {
        "call_id": "call_2",
        "output": [
          {
            "text": 
"API_URL=https://api.example.test
TOKEN=[redacted]
"
,
            "type": "input_text",
          },
        ],
        "type": "function_call_output",
      },
      {
        "content": "It sets API_URL and TOKEN.",
        "role": "assistant",
      },
      {
        "content": [
          {
            "text": "Continue.",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
    ],
    "instructions": "You are a helpful agent.",
    "max_output_tokens": 1024,
    "model": "gpt-5.5",
    "reasoning": {
      "effort": "low",
    },
    "store": false,
    "stream": true,
    "tools": [
      {
        "description": "Read a file from the sandbox workspace.",
        "name": "read_file",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "path": {
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
    ],
  },
  "ok": true,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-thinking-block-replay 1`] = `
{
  "message": "continuation_unsupported: a scripted thinking part can't be sent to openai",
  "ok": false,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-hosted-search-citations 1`] = `
{
  "message": "continuation_unsupported: a scripted server_tool part can't be sent to openai",
  "ok": false,
}
`;
